* Thu Dec 3 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091203
- release version 20091203 
- add gravity loading to Frame3DD
new variables gX gY gZ for gravitational acceleration in the global X Y and Z
directions, add density data to frame element data section, remove density 
data from mass data, new variable nX for extra beam mass, simplified data
entry for extra beam mass.
- user manual updated
- template.3dd updated
- examples updated and checked

* Wed Dec 2 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- fix bug in creating mesh_file and mode_file the first char was being clipped
- change exagg to exagg_static ... specifically for exaggerating static meshes
- add new variable exagg_modal ... specifically for exaggerating modal  meshes
The new variable "exagg_modal" is specified right after the "shift" variable
in the Input Data file.    The command-line option -e applies only to the
static mesh exaggeration, not the dynamic mesh exaggeration.
- Update user-manual.html and the examples/ex*.3dd to reflect the change
- Re-run example files

* Tue Dec 1 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Provide more information from "help" request ... frame3dd -h
- Add -w flag to frame_3dd.m so that the stiffness matrix is written
- Replace ``smart quotes'' from LICENSE.txt with "regular quotes."
- chmod -w LICENSE.txt

* Tue Nov 24 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Change Duke Univ URL in source code comments to frame3dd.sourceforge.net
- Added a simple Makefile to   trunk/src/  directory
- Changed FrameDD to Frame3DD on website/index.html
- Change trunk/LICENSE.txt to GPL v3 license.

* Mon Nov 23 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Fix broken links to Mackerle and Pilkey references in the user manual.

* Wed Nov 18 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Add Stress Check information to the user manual in section 7.13.  

* Tue Nov 17 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022